--- a/etch.css
+++ b/etch.css
@@ -1,7 +1,5 @@
-.container{
+#container{
     display: grid;
-}
-
-.grid-cell{
-    border-style: solid;
+    grid-template-columns: repeat(16, 50px);
+    grid-template-rows: repeat(16, 50px);
 }
