--- a/etch.css
+++ b/etch.css
@@ -2,4 +2,5 @@
     display: grid;
     grid-template-columns: repeat(16, 50px);
     grid-template-rows: repeat(16, 50px);
+    justify-content: center;
 }
